--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: peakavenue-debian
+        ECR_REPOSITORY: peakavenue
         IMAGE_TAG: latest
       working-directory: stable/debian
       run: |
