--- a/stable/debian/Dockerfile
+++ b/stable/debian/Dockerfile
@@ -112,6 +112,8 @@ COPY 20-envsubst-on-templates.sh /docker-entrypoint.d
 COPY 30-tune-worker-processes.sh /docker-entrypoint.d
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
+COPY ./index.html /usr/share/nginx/html/
+
 EXPOSE 80
 
 STOPSIGNAL SIGQUIT
