--- a/stable/debian/Dockerfile
+++ b/stable/debian/Dockerfile
@@ -113,6 +113,7 @@ COPY 30-tune-worker-processes.sh /docker-entrypoint.d
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
 COPY ./index.html /usr/share/nginx/html/
+COPY ./style.css /usr/share/nginx/html/
 
 EXPOSE 80
 
