--- a/stable/debian/Dockerfile
+++ b/stable/debian/Dockerfile
@@ -114,6 +114,17 @@ ENTRYPOINT ["/docker-entrypoint.sh"]
 
 COPY ./index.html /usr/share/nginx/html/
 COPY ./style.css /usr/share/nginx/html/
+COPY ./Dokumente.webp /usr/share/nginx/html/
+COPY ./Homepage Blau.html /usr/share/nginx/html/
+COPY ./Homepage Grün.html /usr/share/nginx/html/
+COPY ./Medaille.tif /usr/share/nginx/html/
+COPY ./einstellung.html /usr/share/nginx/html/
+COPY ./favicon.ico /usr/share/nginx/html/
+COPY ./styleblau.css /usr/share/nginx/html/
+COPY ./stylegruen.css /usr/share/nginx/html/
+COPY ./stylestellungen.css /usr/share/nginx/html/
+COPY ./Bilddateien /usr/share/nginx/html/
+COPY ./Lehrplan /usr/share/nginx/html/
 
 EXPOSE 80
 
