--- a/stable/debian/Dockerfile
+++ b/stable/debian/Dockerfile
@@ -116,7 +116,7 @@ COPY ./index.html /usr/share/nginx/html/
 COPY ./style.css /usr/share/nginx/html/
 COPY ./Dokumente.webp /usr/share/nginx/html/
 COPY ./HomepageBlau.html /usr/share/nginx/html/
-COPY ./HomepageGrün.html /usr/share/nginx/html/
+COPY ./HomepageGruen.html /usr/share/nginx/html/
 COPY ./Medaille.tif /usr/share/nginx/html/
 COPY ./einstellung.html /usr/share/nginx/html/
 COPY ./favicon.ico /usr/share/nginx/html/
