--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,15 @@ env:
   ECS_CLUSTER: Nginx
   ECS_TASK_DEFINITION: ./task_definition.json
   CONTAINER_NAME: NginxMaster     
-                                               
+
+permissions:
+  contents: read
 
 jobs:
   
   build:
     
-    name: Push Image
+    name: Build, Push, Tag Image to ECR & ECS
     runs-on: ubuntu-latest
 
    
@@ -32,7 +34,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-central-1
+        aws-region: ${{ env.AWS_REGION }}
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -54,7 +56,7 @@ jobs:
       with:
         task-definition: ${{ env.ECS_TASK_DEFINITION }}
         container-name: ${{ env.CONTAINER_NAME }}
-        image: ${{ steps.build-image.outputs.image }}
+        image: ${{ steps.build-image.outputs.image }
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
