--- a/stable/debian/Dockerfile
+++ b/stable/debian/Dockerfile
@@ -114,7 +114,7 @@ ENTRYPOINT ["/docker-entrypoint.sh"]
 
 COPY ./index.html /usr/share/nginx/html/
 COPY ./style.css /usr/share/nginx/html/
-COPY ./Dokumente.webp /usr/share/nginx/html/
+COPY ./Dokumente.png /usr/share/nginx/html/
 COPY ./HomepageBlau.html /usr/share/nginx/html/
 COPY ./HomepageGruen.html /usr/share/nginx/html/
 COPY ./Medaille.tif /usr/share/nginx/html/
